# RSS-RAG

./: .env.example  .gitignore  01_architecture_overview.md  02_database_schema.md  03_data_pipeline.md  04_rag_system.md  05_analysis_system.md  AGENTS.md  CLAUDE.md  celery_app.py  config.py  pyproject.toml
analysis/: __init__.py  digest.py  hot_topics.py  mailer.py  router.py  scheduler.py  tasks.py  trend.py
api/: main.py
ingestion/: __init__.py  cleaner.py  deduplicator.py  fetcher.py  pipeline.py  tasks.py
processing/: __init__.py  chunker.py  classifier.py  embedder.py  summarizer.py
rag/: __init__.py  pipeline.py  prompt.py
retrieval/: __init__.py  reranker.py  searcher.py
storage/: __init__.py  db.py  schema.sql
tests/analysis/: test_async_compliance.py  test_mailer.py
tests/ingestion/: test_deduplicator.py
tests/processing/: test_classifier.py
tests/rag/: __init__.py  test_cache.py  test_pipeline.py
tests/retrieval/: __init__.py  test_reranker.py  test_searcher.py
