[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rss-rag"
version = "0.1.0"
description = "RSS to RAG private knowledge base system"
requires-python = ">=3.11"
dependencies = [
  "apscheduler>=3.10",
  "asyncpg>=0.29",
  "beautifulsoup4>=4.12",
  "celery>=5.4",
  "fastapi>=0.115",
  "feedparser>=6.0",
  "httpx>=0.27",
  "numpy>=1.26",
  "pgvector>=0.3",
  "pydantic>=2.8",
  "redis>=5.0",
  "scikit-learn>=1.5",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
